z-index fixes

--- a/css/panel-float.css
+++ b/css/panel-float.css
@@ -2,7 +2,7 @@
 .panelFloat {
 	background: var(--panel-bg);
 	height: auto;
-	z-index: 99999;
+	z-index: 6;
 	border-radius: var(--rounded-radius);
 	backdrop-filter: blur(var(--blur-strength));
 
@@ -32,7 +32,7 @@
 
 #rightDashboard.show {
 	width: 350px;
-	z-index: 4;
+	z-index: 7;
 }
 
 @media screen and (max-width: 580px) {
@@ -59,5 +59,5 @@
 
 #dashboardHider.show {
 	visibility: visible;
-	z-index: 3;
+	z-index: 4;
 }
