--- a/css/profile-container.css
+++ b/css/profile-container.css
@@ -17,13 +17,13 @@
 
 #mainBody {
 	opacity: 1;
-	z-index: 0;
+	z-index: 2;
     transition: opacity var(--transition-speed), z-index var(--transition-speed);
 }
 
 #mainBody.hide {
 	opacity: 0;
-	z-index: 1;
+	z-index: 0;
 }
 
 #profileContainer.hide {
