--- a/css/web-menu.css
+++ b/css/web-menu.css
@@ -49,7 +49,7 @@
 #webMenu.show {
 	transform: scale(1);
 	opacity: 1;
-	z-index: 2;
+	z-index: 3;
 }
 
 #webMenuContainer {
